syntax = "proto3";
package ipsec;

/* Security Policy Database (SPD */
message SecurityPolicyDatabases {
    message SPD {
        uint32 id = 1;  /* SPD ID */

        /* Interface */
        message Interface {
            string name = 1;    /* interface name */
        }
        repeated Interface interfaces = 2;    /* list of interfaces belonging to this SPD */

        /* Policy */
        message Policy {
            /* Policy action */
            enum Action {
                BYPASS = 0;
                DISCARD = 1;
                RESOLVE = 2;
                PROTECT = 3;
            }

            uint32 spd_id = 1;
            int32 priority = 2;
            bool is_outbound = 3;

            bool is_ipv6 = 4;
            string remote_addr_start = 5;
            string remote_addr_stop = 6;
            string local_addr_start = 7;
            string local_addr_stop = 8;

            bool protocol = 9;
            uint32 remote_port_start = 10;
            uint32 remote_port_stop = 11;
            uint32 local_port_start = 12;
            uint32 local_port_stop = 13;

            Action action = 14;
            uint32 sa_id = 15;
        }
        repeated Policy policies = 3;   /* list of policies belonging to this SPD */
    }
    repeated SPD spds = 1;  /* list of all SPDs */
}

/* Cryptographic algorithm for authentication */
enum IntegAlgorithm {
    NONE = 0;
    MD5_96 = 1;
    SHA1_96 = 2;
    SHA_256_96 = 3;
    SHA_256_128 = 4;
    SHA_384_192 = 5;
    SHA_512_256 = 6;
}

/* Cryptographic algorithm for encryption */
enum CryptoAlgorithm {
    NONE = 0;
    AES_CBC_128 = 1;
    AES_CBC_192 = 2;
    AES_CBC_256 = 3;
}

/* Security Association (SA) */
message SecurityAssociations {
    /* IPSec protocol */
    enum IPSecProtocol {
        AH = 0;
        ESP = 1;
    }

    message SA {
        uint32 id = 1; /* SA ID */
        uint32 spi = 2;
        IPSecProtocol protocol = 3;

        CryptoAlgorithm crypto_alg = 4;
        string crypto_key = 5;

        IntegAlgorithm integ_alg = 6;
        string integ_key = 7;

        bool use_esn = 8;          /* Use extended sequence number */
        bool use_anti_replay = 9;  /* Use anti replay */

        bool is_tunnel = 10;
        bool is_tunnel_ipv6 = 11;
        string tunnel_src_addr = 12;
        string tunnel_dst_addr = 13;
    }
    repeated SA sas = 1;
}